--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
+    "idle-vue": "^2.0.5",
+    "postcss": "^7.0.35",
+    "tailwindcss": "^1.9.6",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
   },
